--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -12,6 +12,43 @@
         h1, h2 {
             color: #333;
         }
+        /* Ribbon Bar Styling */
+        .ribbon-bar {
+            background-color: #007bff;
+            color: white;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            cursor: pointer;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .ribbon-bar h2 {
+            color: white;
+            margin: 0;
+        }
+        .ribbon-bar .arrow {
+            font-size: 1.5em;
+            transition: transform 0.3s ease;
+        }
+        .ribbon-bar.expanded .arrow {
+            transform: rotate(90deg);
+        }
+        .explanation-content {
+            display: none;
+            padding: 15px;
+            border: 1px solid #ddd;
+            border-top: none;
+            border-radius: 0 0 5px 5px;
+            background-color: #f9f9f9;
+            text-align: justify; /* Justified text */
+        }
+        .explanation-content.show {
+            display: block;
+        }
+        /* End Ribbon Bar Styling */
+
         .input-section {
             margin-bottom: 20px;
             padding: 15px;
@@ -114,7 +151,8 @@
             margin-top: 5px;
             display: block;
         }
-        #status, #error-message {
+        #status,
+        #error-message {
             color: red;
             margin-top: 10px;
         }
@@ -159,18 +197,23 @@
 </head>
 <body>
     <h1>Helsa Nurse Scheduling Application</h1>
-    <p>Nurse scheduling (or shift management) is a long-standing challenge in many hospitals and healthcare systems. While the problem has been widely studied in academia, especially in operations research, there are still few software tools that are actually used by hospital staff.</p>
-    <p>Based on our interviews with nurses from three different hospitals in Iran, we found that nurse scheduling is still often done manually by one of the volunteer nurses. This process can be time-consuming and inefficient, especially when considering multiple constraints such as department-specific shift requirements, and fairness (based on seniority, weekend and night shifts, and individual preferences). This problem is a variation of the classic "assignment problem" in operations research. To address this problem, we develop an integer programming model in Python using the Gurobi optimization library. More technical details are available in the application catalog.</p>
-    <p>To generate the optimal nurse schedule, the following three sets of inputs are defined: a) Nurse ID/Name/Seniority. b) Preferences of each nurse for each shift (if available). c) Shift requirements (number of nurses needed per shift across the planning horizon). You can enter the inputs in one of two ways of file upload and manual entry. You can also combine both methods, manual entries will override any matching entries from the uploaded files.</p>
-    <p>If you would like to upload your own input files, please use the format provided in the template files available on this page. Download the three input templates, complete them using your own nurse data and requirements, and make sure to keep the header rows and file names unchanged. Upload the completed files and then click "Generate Schedule and Reports".</p>
-    <p>You can also download sample output files (generated based on the template inputs) to understand the expected format and compare them with your own results. These sample outputs are provided in the Reports section below and will be replaced with new output files based on your uploaded inputs after generating the schedule.</p>
+
+    <div class="ribbon-bar" onclick="toggleExplanation()">
+        <h2>General Information</h2>
+        <span class="arrow">&#9658;</span> </div>
+    <div id="general-info-content" class="explanation-content">
+        <p>Nurse scheduling (or shift management) is a long-standing challenge in many hospitals and healthcare systems. While the problem has been widely studied in academia, especially in operations research, there are still few software tools that are actually used by hospital staff.</p>
+        <p>Based on our interviews with nurses from three different hospitals in Iran, we found that nurse scheduling is still often done manually by one of the volunteer nurses. This process can be time-consuming and inefficient, especially when considering multiple constraints such as department-specific shift requirements, and fairness (based on seniority, weekend and night shifts, and individual preferences). This problem is a variation of the classic "assignment problem" in operations research. To address this problem, we develop an integer programming model in Python using the Gurobi optimization library. More technical details are available in the application catalog.</p>
+        <p>To generate the optimal nurse schedule, the following three sets of inputs are defined: a) Nurse ID/Name/Seniority. b) Preferences of each nurse for each shift (if available). c) Shift requirements (number of nurses needed per shift across the planning horizon). You can enter the inputs in one of two ways of file upload and manual entry. You can also combine both methods, manual entries will override any matching entries from the uploaded files.</p>
+        <p>If you would like to upload your own input files, please use the format provided in the template files available on this page. Download the three input templates, complete them using your own nurse data and requirements, and make sure to keep the header rows and file names unchanged. Upload the completed files and then click "Generate Schedule and Reports".</p>
+        <p>You can also download sample output files (generated based on the template inputs) to understand the expected format and compare them with your own results. These sample outputs are provided in the Reports section below and will be replaced with new output files based on your uploaded inputs after generating the schedule.</p>
+    </div>
 
     <div id="templates" class="input-section">
         <h2>Download Templates</h2>
         <a href="templates/nurses_file.csv" download="nurses_file.csv">Download Nurses Template (CSV)</a>
         <a href="templates/requirements_file.csv" download="requirements_file.csv">Download Requirements Template (CSV)</a>
         <a href="templates/preferences_file.csv" download="preferences_file.csv">Download Preferences Template (CSV)</a>
-        
     </div>
 
     <div class="input-section">
@@ -182,7 +225,6 @@
         <input type="file" id="requirementsFile" accept=".csv">
         <label for="preferencesFile" class="upload-label">Upload Preferences Data (CSV):</label>
         <input type="file" id="preferencesFile" accept=".csv">
-        
     </div>
 
     <div class="input-section">
@@ -234,17 +276,17 @@
     <div id="status"></div>
 
     <div id="reports">
-    <h2>Reports</h2>
-    <p id="reports-caption">The below reports are sample outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.</p>
-    <a id="schedule-placeholder" href="templates/placeholder_schedule.csv" download="placeholder_schedule.csv">Download Sample Optimal Schedule (CSV)</a>
-    <a id="stats-placeholder" href="templates/placeholder_stats.csv" download="placeholder_stats.csv">Download Sample Nurse Statistics (CSV)</a>
-    <a id="coverage-placeholder" href="templates/placeholder_coverage.csv" download="placeholder_coverage.csv">Download Sample Shift Coverage (CSV)</a>
-    <a id="pdf-placeholder" href="templates/placeholder_report.pdf" download="placeholder_report.pdf">Download Sample Nurse Report (PDF)</a>
-    <a id="schedule-csv" href="#" style="display: none;">Download Optimal Schedule (CSV)</a>
-    <a id="stats-csv" href="#" style="display: none;">Download Nurse Statistics (CSV)</a>
-    <a id="coverage-csv" href="#" style="display: none;">Download Shift Coverage (CSV)</a>
-    <a id="pdf-report" href="#" style="display: none;">Download Nurse Report (PDF)</a>
-</div>
+        <h2>Reports</h2>
+        <p id="reports-caption">The below reports are sample outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.</p>
+        <a id="schedule-placeholder" href="templates/placeholder_schedule.csv" download="placeholder_schedule.csv">Download Sample Optimal Schedule (CSV)</a>
+        <a id="stats-placeholder" href="templates/placeholder_stats.csv" download="placeholder_stats.csv">Download Sample Nurse Statistics (CSV)</a>
+        <a id="coverage-placeholder" href="templates/placeholder_coverage.csv" download="placeholder_coverage.csv">Download Sample Shift Coverage (CSV)</a>
+        <a id="pdf-placeholder" href="templates/placeholder_report.pdf" download="placeholder_report.pdf">Download Sample Nurse Report (PDF)</a>
+        <a id="schedule-csv" href="#" style="display: none;">Download Optimal Schedule (CSV)</a>
+        <a id="stats-csv" href="#" style="display: none;">Download Nurse Statistics (CSV)</a>
+        <a id="coverage-csv" href="#" style="display: none;">Download Shift Coverage (CSV)</a>
+        <a id="pdf-report" href="#" style="display: none;">Download Nurse Report (PDF)</a>
+    </div>
 
     <div id="gantt-chart">
         <h2>Gantt Chart</h2>
@@ -255,6 +297,13 @@
     </div>
 
     <script>
+        function toggleExplanation() {
+            const content = document.getElementById('general-info-content');
+            const ribbon = document.querySelector('.ribbon-bar');
+            content.classList.toggle('show');
+            ribbon.classList.toggle('expanded');
+        }
+
         // Validation
         function validateInputs(inputs, includeDate = false) {
             for (let input of inputs) {
