--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -181,12 +181,28 @@
         #templates a:hover {
             text-decoration: underline;
         }
-        #gantt-placeholder {
-            max-width: 100%;
-            display: block;
+        /* Styles for the image and link container */
+        .gantt-container {
+            text-align: center; /* Center the image and link */
             margin-top: 10px;
         }
-        #gantt-caption, #reports-caption {
+        #gantt-image {
+            max-width: 100%;
+            height: auto; /* Maintain aspect ratio */
+            display: block; /* Ensures it takes up full width for centering */
+            margin: 0 auto; /* Center the image */
+            margin-bottom: 10px; /* Space between image and link */
+        }
+        #gantt-download-link {
+            display: block; /* Make the link a block to ensure it's on its own line */
+            margin-top: 5px;
+            color: #007bff;
+            text-decoration: none;
+        }
+        #gantt-download-link:hover {
+            text-decoration: underline;
+        }
+        #gantt-caption {
             color: #777;
             font-size: 0.9em;
             margin-top: 5px;
@@ -291,9 +307,12 @@
     <div id="gantt-chart">
         <h2>Gantt Chart</h2>
         <p class="note"></p>
-        <span id="gantt-caption" style="display:block; text-align:center; color:#777; font-size:0.9em; margin-top:5px;">The below Gantt chart is based on template inputs. The optimal Gantt chart based on your inputs will be displayed here after generating the new schedule.</span>
-        <img id="gantt-placeholder" src="templates/placeholder_gantt.png" alt="Gantt Chart Placeholder">
-        <img id="gantt-image" style="max-width: 100%; display: none;" alt="Gantt Chart">
+        <span id="gantt-caption">The below Gantt chart is based on template inputs. The optimal Gantt chart based on your inputs will be displayed here after generating the new schedule.</span>
+        <div class="gantt-container">
+            <img id="gantt-placeholder" src="templates/placeholder_gantt.png" alt="Gantt Chart Placeholder">
+            <img id="gantt-image" style="display: none;" alt="Gantt Chart">
+            <a id="gantt-download-link" href="templates/placeholder_gantt.png" download="placeholder_gantt.png">Download Sample Gantt Chart (PNG)</a>
+        </div>
     </div>
 
     <script>
@@ -578,89 +597,103 @@
             };
         }
 
-// Function to initiate the schedule generation process
-async function generateSchedule() {
-    const nursesFile = document.getElementById('nursesFile').files[0];
-    const preferencesFile = document.getElementById('preferencesFile').files[0];
-    const requirementsFile = document.getElementById('requirementsFile').files[0];
+        // Function to initiate the schedule generation process
+        async function generateSchedule() {
+            const nursesFile = document.getElementById('nursesFile').files[0];
+            const preferencesFile = document.getElementById('preferencesFile').files[0];
+            const requirementsFile = document.getElementById('requirementsFile').files[0];
 
-    // Check if at least one input source (file or manual) has data
-    const manualData = manualToCSV();
-    const hasFileInput = nursesFile || preferencesFile || requirementsFile;
-    const hasManualInput = manualData.nurses || manualData.preferences || manualData.requirements;
+            // Check if at least one input source (file or manual) has data
+            const manualData = manualToCSV();
+            const hasFileInput = nursesFile || preferencesFile || requirementsFile;
+            const hasManualInput = manualData.nurses || manualData.preferences || manualData.requirements;
 
-    if (!hasFileInput && !hasManualInput) {
-        document.getElementById('status').innerText = 'Please provide at least one input (file or manual).';
-        return;
-    }
+            if (!hasFileInput && !hasManualInput) {
+                document.getElementById('status').innerText = 'Please provide at least one input (file or manual).';
+                return;
+            }
 
-    document.getElementById('status').innerText = 'Processing inputs and running optimization...';
-    // Reset Gantt chart
-    document.getElementById('gantt-placeholder').style.display = 'block';
-    document.getElementById('gantt-image').style.display = 'none';
-    document.getElementById('gantt-caption').innerText = 'The below Gantt chart is based on template inputs.';
-    // Reset Reports section
-    document.getElementById('schedule-placeholder').style.display = 'block';
-    document.getElementById('stats-placeholder').style.display = 'block';
-    document.getElementById('coverage-placeholder').style.display = 'block';
-    document.getElementById('pdf-placeholder').style.display = 'block';
-    document.getElementById('schedule-csv').style.display = 'none';
-    document.getElementById('stats-csv').style.display = 'none';
-    document.getElementById('coverage-csv').style.display = 'none';
-    document.getElementById('pdf-report').style.display = 'none';
-    document.getElementById('reports-caption').innerText = 'The below reports are sample outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.';
+            document.getElementById('status').innerText = 'Processing inputs and running optimization...';
 
-    try {
-        const mergedData = await mergeInputs(nursesFile, preferencesFile, requirementsFile);
+            // Reset Gantt chart display and link
+            document.getElementById('gantt-placeholder').style.display = 'block'; // Show placeholder image
+            document.getElementById('gantt-image').style.display = 'none'; // Hide generated image
+            document.getElementById('gantt-download-link').href = "templates/placeholder_gantt.png"; // Reset download link
+            document.getElementById('gantt-download-link').download = "placeholder_gantt.png"; // Reset download filename
+            document.getElementById('gantt-download-link').textContent = "Download Sample Gantt Chart (PNG)"; // Reset link text
+            document.getElementById('gantt-caption').innerText = 'The below Gantt chart is based on template inputs.';
 
-        // Basic validation to ensure all data types are present
-        if (!mergedData.nurses || !mergedData.preferences || !mergedData.requirements) {
-            document.getElementById('status').innerText = 'Incomplete input data. Please provide all required data.';
-            return;
+            // Reset Reports section
+            document.getElementById('schedule-placeholder').style.display = 'block';
+            document.getElementById('stats-placeholder').style.display = 'block';
+            document.getElementById('coverage-placeholder').style.display = 'block';
+            document.getElementById('pdf-placeholder').style.display = 'block';
+            document.getElementById('schedule-csv').style.display = 'none';
+            document.getElementById('stats-csv').style.display = 'none';
+            document.getElementById('coverage-csv').style.display = 'none';
+            document.getElementById('pdf-report').style.display = 'none';
+            document.getElementById('reports-caption').innerText = 'The below reports are sample outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.';
+
+            try {
+                const mergedData = await mergeInputs(nursesFile, preferencesFile, requirementsFile);
+
+                // Basic validation to ensure all data types are present
+                if (!mergedData.nurses || !mergedData.preferences || !mergedData.requirements) {
+                    document.getElementById('status').innerText = 'Incomplete input data. Please provide all required data.';
+                    return;
+                }
+
+                // Prepare the form data to send to the backend
+                const formData = new FormData();
+                formData.append('nurses_file', new Blob([mergedData.nurses], { type: 'text/csv' }), 'nurses.csv');
+                formData.append('preferences_file', new Blob([mergedData.preferences], { type: 'text/csv' }), 'preferences.csv');
+                formData.append('requirements_file', new Blob([mergedData.requirements], { type: 'text/csv' }), 'requirements.csv');
+
+                // Send the data to the backend for optimization
+                const response = await fetch('https://hamedmilani.pythonanywhere.com/upload_and_run', {
+                    method: 'POST',
+                    body: formData,
+                });
+
+                const result = await response.json();
+                document.getElementById('status').innerText = result.response || result.error || 'An error occurred during processing.';
+
+                // If the optimization was successful, display the results
+                if (result.response && result.response.startsWith('Optimization successful')) {
+                    const outputBaseURL = 'https://hamedmilani.pythonanywhere.com/get_output/';
+                    const ganttImageUrl = outputBaseURL + 'schedule_gantt.png';
+
+                    // Update Gantt chart image and link
+                    document.getElementById('gantt-placeholder').style.display = 'none'; // Hide placeholder
+                    document.getElementById('gantt-image').src = ganttImageUrl; // Set generated image source
+                    document.getElementById('gantt-image').style.display = 'block'; // Show generated image
+
+                    const ganttDownloadLink = document.getElementById('gantt-download-link');
+                    ganttDownloadLink.href = ganttImageUrl; // Update download link
+                    ganttDownloadLink.download = 'optimal_gantt_chart.png'; // Set download filename
+                    ganttDownloadLink.textContent = 'Download Optimal Gantt Chart (PNG)'; // Update link text
+                    document.getElementById('gantt-caption').innerText = 'The below Gantt chart visualizing the optimal nurse schedule is based on your inputs.';
+
+
+                    // Update Reports section
+                    document.getElementById('schedule-csv').href = outputBaseURL + 'optimal_schedule.csv';
+                    document.getElementById('stats-csv').href = outputBaseURL + 'nurse_stats.csv';
+                    document.getElementById('coverage-csv').href = outputBaseURL + 'shift_coverage.csv';
+                    document.getElementById('pdf-report').href = outputBaseURL + 'combined_nurse_reports.pdf';
+                    document.getElementById('schedule-placeholder').style.display = 'none';
+                    document.getElementById('stats-placeholder').style.display = 'none';
+                    document.getElementById('coverage-placeholder').style.display = 'none';
+                    document.getElementById('pdf-placeholder').style.display = 'none';
+                    document.getElementById('schedule-csv').style.display = 'block';
+                    document.getElementById('stats-csv').style.display = 'block';
+                    document.getElementById('coverage-csv').style.display = 'block';
+                    document.getElementById('pdf-report').style.display = 'block';
+                    document.getElementById('reports-caption').innerText = 'The below reports contain the optimal nurse schedule and statistics based on your inputs.';
+                }
+            } catch (error) {
+                document.getElementById('status').innerText = 'Error: ' + error.message;
+            }
         }
-
-        // Prepare the form data to send to the backend
-        const formData = new FormData();
-        formData.append('nurses_file', new Blob([mergedData.nurses], { type: 'text/csv' }), 'nurses.csv');
-        formData.append('preferences_file', new Blob([mergedData.preferences], { type: 'text/csv' }), 'preferences.csv');
-        formData.append('requirements_file', new Blob([mergedData.requirements], { type: 'text/csv' }), 'requirements.csv');
-
-        // Send the data to the backend for optimization
-        const response = await fetch('https://hamedmilani.pythonanywhere.com/upload_and_run', {
-            method: 'POST',
-            body: formData,
-        });
-
-        const result = await response.json();
-        document.getElementById('status').innerText = result.response || result.error || 'An error occurred during processing.';
-
-        // If the optimization was successful, display the results
-        if (result.response && result.response.startsWith('Optimization successful')) {
-            const outputBaseURL = 'https://hamedmilani.pythonanywhere.com/get_output/';
-            // Update Gantt chart
-            document.getElementById('gantt-image').src = outputBaseURL + 'schedule_gantt.png';
-            document.getElementById('gantt-placeholder').style.display = 'none';
-            document.getElementById('gantt-image').style.display = 'block';
-            document.getElementById('gantt-caption').innerText = 'The below Gantt chart visualizing the optimal nurse schedule is based on your inputs.';
-            // Update Reports section
-            document.getElementById('schedule-csv').href = outputBaseURL + 'optimal_schedule.csv';
-            document.getElementById('stats-csv').href = outputBaseURL + 'nurse_stats.csv';
-            document.getElementById('coverage-csv').href = outputBaseURL + 'shift_coverage.csv';
-            document.getElementById('pdf-report').href = outputBaseURL + 'combined_nurse_reports.pdf';
-            document.getElementById('schedule-placeholder').style.display = 'none';
-            document.getElementById('stats-placeholder').style.display = 'none';
-            document.getElementById('coverage-placeholder').style.display = 'none';
-            document.getElementById('pdf-placeholder').style.display = 'none';
-            document.getElementById('schedule-csv').style.display = 'block';
-            document.getElementById('stats-csv').style.display = 'block';
-            document.getElementById('coverage-csv').style.display = 'block';
-            document.getElementById('pdf-report').style.display = 'block';
-            document.getElementById('reports-caption').innerText = 'The below reports contain the optimal nurse schedule and statistics based on your inputs.';
-        }
-    } catch (error) {
-        document.getElementById('status').innerText = 'Error: ' + error.message;
-    }
-}
     </script>
 </body>
 </html>
