--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -282,10 +282,12 @@
         <a id="stats-placeholder" href="templates/placeholder_stats.csv" download="placeholder_stats.csv">Download Sample Nurse Statistics (CSV)</a>
         <a id="coverage-placeholder" href="templates/placeholder_coverage.csv" download="placeholder_coverage.csv">Download Sample Shift Coverage (CSV)</a>
         <a id="pdf-placeholder" href="templates/placeholder_report.pdf" download="placeholder_report.pdf">Download Sample Nurse Report (PDF)</a>
+        <a id="gantt_file-placeholder" href="templates/placeholder_gantt.png" download="placeholder_gantt.png">Download Schedule Ganttchart File (PNG)</a>
         <a id="schedule-csv" href="#" style="display: none;">Download Optimal Schedule (CSV)</a>
         <a id="stats-csv" href="#" style="display: none;">Download Nurse Statistics (CSV)</a>
         <a id="coverage-csv" href="#" style="display: none;">Download Shift Coverage (CSV)</a>
         <a id="pdf-report" href="#" style="display: none;">Download Nurse Report (PDF)</a>
+        <a id="gantt-report" href="#" style="display: none;">Download Schedule Ganttchart File (PNG)</a>
     </div>
 
     <div id="gantt-chart">
@@ -604,10 +606,12 @@ async function generateSchedule() {
     document.getElementById('stats-placeholder').style.display = 'block';
     document.getElementById('coverage-placeholder').style.display = 'block';
     document.getElementById('pdf-placeholder').style.display = 'block';
+    document.getElementById('gantt_file-placeholder').style.display = 'block';
     document.getElementById('schedule-csv').style.display = 'none';
     document.getElementById('stats-csv').style.display = 'none';
     document.getElementById('coverage-csv').style.display = 'none';
     document.getElementById('pdf-report').style.display = 'none';
+    document.getElementById('gantt-report').style.display = 'none';
     document.getElementById('reports-caption').innerText = 'The below reports are sample outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.';
 
     try {
@@ -647,6 +651,7 @@ async function generateSchedule() {
             document.getElementById('stats-csv').href = outputBaseURL + 'nurse_stats.csv';
             document.getElementById('coverage-csv').href = outputBaseURL + 'shift_coverage.csv';
             document.getElementById('pdf-report').href = outputBaseURL + 'combined_nurse_reports.pdf';
+            document.getElementById('gantt-report').href = outputBaseURL + 'schedule_gantt.png';
             document.getElementById('schedule-placeholder').style.display = 'none';
             document.getElementById('stats-placeholder').style.display = 'none';
             document.getElementById('coverage-placeholder').style.display = 'none';
@@ -655,6 +660,7 @@ async function generateSchedule() {
             document.getElementById('stats-csv').style.display = 'block';
             document.getElementById('coverage-csv').style.display = 'block';
             document.getElementById('pdf-report').style.display = 'block';
+            document.getElementById('gantt-report').style.display = 'block';
             document.getElementById('reports-caption').innerText = 'The below reports contain the optimal nurse schedule and statistics based on your inputs.';
         }
     } catch (error) {
