--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -282,7 +282,7 @@
         <a id="stats-placeholder" href="templates/placeholder_stats.csv" download="placeholder_stats.csv">Download Sample Nurse Statistics (CSV)</a>
         <a id="coverage-placeholder" href="templates/placeholder_coverage.csv" download="placeholder_coverage.csv">Download Sample Shift Coverage (CSV)</a>
         <a id="pdf-placeholder" href="templates/placeholder_report.pdf" download="placeholder_report.pdf">Download Sample Nurse Report (PDF)</a>
-        <a id="gantt_file-placeholder" href="templates/placeholder_gantt.png" download="placeholder_gantt.png">Download Schedule Ganttchart File (PNG)</a>
+        <a id="gantt_file-placeholder" href="templates/placeholder_gantt.png" download="placeholder_gantt.png">Download Schedule Gantt Chart File (PNG)</a>
         <a id="schedule-csv" href="#" style="display: none;">Download Optimal Schedule (CSV)</a>
         <a id="stats-csv" href="#" style="display: none;">Download Nurse Statistics (CSV)</a>
         <a id="coverage-csv" href="#" style="display: none;">Download Shift Coverage (CSV)</a>
