--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -656,6 +656,7 @@ async function generateSchedule() {
             document.getElementById('stats-placeholder').style.display = 'none';
             document.getElementById('coverage-placeholder').style.display = 'none';
             document.getElementById('pdf-placeholder').style.display = 'none';
+            document.getElementById('gantt-placeholder').style.display = 'none';
             document.getElementById('schedule-csv').style.display = 'block';
             document.getElementById('stats-csv').style.display = 'block';
             document.getElementById('coverage-csv').style.display = 'block';
